--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="IDK Network"
+      content="Dapper Development"
     />
    
-    <title>IDK Network</title>
+    <title>Dapper Development</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
